adopted the dashboard layout

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,4 +1,18 @@
+.bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
 
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+{ /*
 .App-header {
   background-color: #edeff8;
   min-height: 100vh;
@@ -55,3 +69,4 @@ button {
     transform: rotate(360deg);
   }
 }
+*/}
